(Format: Year/Month/Day)
Changes for 0.9.13
*05/04/29:
  * Added new IconbarModes:  (Mathias)
       NoIcons          - all but iconified windows
       WorkspaceNoIcons - all but iconified windows on the current ws
    IconbarTool.cc/hh nls/fluxbox_nls.hh C/Translation.m
  * Fixed transient bug.  (Henrik)
    #1157361 inconsistent behavior of Java dialogs.
    Transients that are created before the transient_for window
    gets copied to a transient_for waiting list and when the 
    transient_for window is created the transients are updated, 
    When raising a transient window the window gets placed last
    in the transient list so it gets raised last and thus gets 
    places above.
    WinClient.hh/cc, Window.cc    
*05/04/28:
  * Revert Mathias's little change to my patch, and fix it properly :) (Simon)
    FbTk/FbWindow.cc/hh FbWinFrame.cc    
*05/04/27:
  * Fix some initialisation, plus setting background too much (Simon + Mathias)
    FbTk/FbWindow.cc/hh FbWinFrame.cc
  * Add some extremely basic handling for icon pixmaps that aren't
    the same depth as the screen (treat all as 1-bit, easy to handle)
    (Simon)
    FbTk/FbPixmap.hh/cc FbTk/ImageImlib2.cc IconButton.cc
  * Fix a bunch more issues with recent patches (Simon)
    - Clock text colour on start
    - Resizing not updating in some cases
    - menu separators not being drawn
    FbTk/... FbWindow.hh MenuSeparator.hh/cc TextButton.cc
    ClockTool.cc IconbarTool.cc TextTheme.cc ToolFactory.cc
  * Close #1107216, minor fbgm-issue, cosmetic startfluxbox (from the OpenBSD patches)
    nls/Makefile.am util/fluxbox-generate_menu.in util/startfluxbox.in
  * Fix #1182770 (Mathias)
    session.screen*.workspaces: <int> and the number of
    workspaces in the running fluxbox were out of sync and lead to
    segfault on a "reloadconfig"-Command.
    fluxbox.cc Screen.cc Workspace.cc WorkspaceNameTool.cc
  * Fix drawing when transparency off (Simon)
    FbWindow.cc
*05/04/26: